# chip8-emulator

./: .gitignore  .gitmodules  Cargo.toml  README.md  test roms.md
cpu/: Cargo.toml  lib.rs
graphics/: Cargo.toml  graphics_memory.rs  lib.rs
memory/: Cargo.toml  lib.rs
src/: cpu.rs  graphics.rs  input.rs  main.rs  memory.rs  sound.rs  timers.rs
src/cpu/: isa.rs
