[package]
name = "chip-8-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { workspace = true }
graphics = { path = "graphics" }
memory = { path = "memory" }
cpu = { path = "cpu" }

[workspace]
members = ["memory", "graphics", "cpu"]

[workspace.dependencies]
pixels = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winit = { version = "0.30.1", features = ["rwh_05"] }
